--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,5 +6,5 @@ spring:
       client:
         registration:
           google:
-            client-id: 999532045528-gtaqv0hoglk36rot2hnshcl3960uo4g7.apps.googleusercontent.com
-            client-secret: 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
+            client-id: {$GOOGLE_CLIENT_ID}
+            client-secret: {$GOOGLE_CLIENT_SECRET}
