--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gateway</name>
+	<name>api-gateway</name>
 	<description>gateway</description>
 	<properties>
 		<java.version>17</java.version>
