--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>oauth2-gateway-in-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>gateway</module>
+        <module>api-gateway</module>
         <module>user-services</module>
     </modules>
 
