--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -5,8 +5,6 @@ spring:
     name: api-gateway
   security:
     oauth2:
-      client:
-        registration:
-          google:
-            client-id: 999532045528-gtaqv0hoglk36rot2hnshcl3960uo4g7.apps.googleusercontent.com
-            client-secret: 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
+      resourceserver:
+        jwt:
+          jwk-set-uri: "http://localhost:8070/realms/master/protocol/openid-connect/certs"
